--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,14 @@ body {
 }
 
 .container {
-    max-width: 1440px;
     min-width: 375px;
-    height: 85vh;
+    height: 100vh;
     padding-inline: 15px;
     background-color: hsl(212, 45%, 89%);
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .container .box {
@@ -25,6 +25,7 @@ body {
     text-align: center;
     border-radius: 20px;
     width: 335px;
+    box-shadow: 2px 4px 12px 0px #9ea7b2;
 }
 
 .container .box .image {
@@ -40,7 +41,7 @@ body {
     padding: 20px;
 }
 
-.container .box .text strong {
+.container .box .text h1 {
     font-size: 23px;
     color: hsl(218, 44%, 22%);
     display: block;
@@ -53,13 +54,9 @@ body {
 }
 
 .attribution {
-    height: 15vh;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
-    gap: 10px;
-    font-size: 21px;
+    position: absolute;
+    bottom: 10px;
+    font-size: 14px;
 }
 
 .attribution a {
